--- a/app/homework/HomeworkPage.styl
+++ b/app/homework/HomeworkPage.styl
@@ -1,6 +1,6 @@
 .homeworkPage
 	width: 100%
-	height: calc(100% - 80px)
+	height: 100%
 
 	.col-md-3
 		height: 100%
